# agenda-futbol-telegram-api

./: .gitignore  Dockerfile  README.md  app.py  models.py  pyproject.toml  settings.py
.github/workflows/: publish-on-push.yml  publish-on-release.yml
api/: app.py
api/graphql/: __init__.py  app.py  schema.py
api/graphql/alias/: resolvers.py
api/graphql/event/: __init__.py  helpers.py  resolvers.py  type.py
schema/Alias/: resolvers.py
schema/Event/: utils.py
scraper/: __init__.py  core.py
