[tool.poetry]
name = "events-api"
version = "0.3.0"
description = ""
authors = ["David Escobar <david.escobar@ug.uchile.cl>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.10.9"
beautifulsoup4 = "4.11.1"
fastapi = "^0.115.0"
graphql-core = "3.2.1"
lxml = "4.9.1"
numpy = "1.23.1"
pandas = "1.4.3"
pydantic = "1.9.1"
python-decouple = "3.6"
python-levenshtein = "^0.26.0"
requests = "2.28.1"
strawberry-graphql = "0.177.1"
thefuzz = "0.19.0"
uvicorn = "^0.31.0"
uvloop = "^0.20.0"
ormar = {extras = ["postgresql"], version = "^0.12.2"}


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
