[tool.poetry]
name = "events-api"
version = "0.3.0"
description = ""
authors = ["David Escobar <david.escobar@ug.uchile.cl>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "3.10.9"
beautifulsoup4 = "^4.12.3"
fastapi = "^0.115.0"
graphql-core = "^3.2.4"
lxml = "^5.3.0"
numpy = "^2.1.1"
pandas = "^2.2.3"
python-decouple = "^3.8"
python-levenshtein = "^0.26.0"
requests = "^2.32.3"
strawberry-graphql = "^0.243.1"
thefuzz = "^0.22.1"
uvicorn = "^0.31.0"
uvloop = "^0.20.0"
ormar = {extras = ["postgresql"], version = "^0.20.1"}


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
